# autoresearch

./: .gitignore  data_prep.py  generate.py  prepare_medical.py  program.md  pyproject.toml  sync_logs.py  train.py
rag/: HOW_IT_WORKS.md  app.py  chat.py  config.yaml  embed_mtsamples.py  requirements.txt
sft/: generate_pairs.py  pairs.jsonl  push_to_ollama.py  train_sft.py
